2017-01-31  Wenson Hsieh  <wenson_hsieh@apple.com>

        Crash when trying to compute global location when the WKContentView does not have a window
        https://bugs.webkit.org/show_bug.cgi?id=167627
        <rdar://problem/30272380>

        Reviewed by Beth Dakin.

        Moves data interaction state out of OpenSource and into WebKitAdditions. Work towards fixing a crash in
        <rdar://problem/30272380>.

        * UIProcess/ios/WKContentViewInteraction.h:
        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView resignFirstResponder]):

2017-01-31  Youenn Fablet  <youennf@gmail.com>

        [WebRTC] Add support for WK2 libwebrtc endpoint
        https://bugs.webkit.org/show_bug.cgi?id=167306
        <rdar://problem/30245426>

        Reviewed by Alex Christensen.

        Implementation of the LibWebRTC networking in WebKit2.
        The following features are required to be moved from WebProcess to NetworkProcess:
        1 Resolution of DNS names (RTCResolver)
        2 Enumeration of interfaces/gathering of host addresses (RTCMonitor)
        3 Implementation of Packet Socket for TCP/UDP communication (RTCSocket).

        This patch implements the related classes in WebProcess/NetworkProcess and the integration with libwebrtc.
        NetworkProcess implementation is using libwebetc for NetworkRTCMonitor and NetworkRTCSocket.
        This ensures an as-close implementation to libwebrtc as possible.
        In the future, after getting a better test infrastructure we should try to implement these using native APIs.

        Currently, the implementation is as follow:
        - libwebrtc is calling WebProcess stack on the rtc network thread
        - WebProcess stack is forwarding calls to the main thread and makes related IPC calls
        - NetworkProcess receives the IPC calls and forward them to the rtc network thread.
        - The calls are processed in the rtc network thread